objects/CN_Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>CN_AR_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance AR</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Sales Order (Finance AR)</relationshipLabel>
        <relationshipName>Sales_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Block__c</fullName>
        <label>Billing block</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01-Calculation Missing</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02-Compl Confirm Missng</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03-Prices Incomplete</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04-Check Terms of Paymt</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05-Check Terms of Dlv</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08-Check Credit Memo</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09-Check Debit Memo</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10-</label>
                </value>
                <value>
                    <fullName>YH</fullName>
                    <label>YH-Rejected by Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Credit check was executed, document OK</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Credit check was executed, document not OK</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Credit check was executed, document not OK, partial release</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D-Document released by credit representative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CNY</fullName>
                    <default>true</default>
                    <label>CNY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-to party</label>
        <referenceTo>CN_Ship_to_Party__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Block__c</fullName>
        <label>Delivery block</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01-Credit limit</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02-Waitting confirm</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03-Bottleneck material</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04-Export papers missng</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05-Check free of ch.dlv</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>06-No printing</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>07-Change in quantity</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08-Kanban Delivery</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09-JIT delivery (PDS)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10-Not achieve MOQ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01-SFD</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02-Domestic Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Incoterms1__c</fullName>
        <label>Incoterms (Part 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR-Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF-Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP-Carriage and insurance paid to</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT-Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAF</fullName>
                    <label>DAF-Delivered at frontier</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP-Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <label>DDU-Delivered Duty Unpaid</label>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                    <label>DEQ-Delivered ex quay (duty paid)</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <label>DES-Delivered ex ship</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <label>EXW-Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS-Free Alongside Ship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA-Free Carrier</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>FH-Free house</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB-Free on board</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN-Not Free</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Incoterms2__c</fullName>
        <label>Incoterms (Part 2)</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Within_6_Months__c</fullName>
        <formula>CN_SAP_Create_Date__c &gt;=  ADDMONTHS(ToDay(),-6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN_Is_Within_6_Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Order_Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Order_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Reason</label>
        <referenceTo>CN_Order_Reason__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Order_Reference_No__c</fullName>
        <externalId>true</externalId>
        <label>Order Reference No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Overall_Blocked_Status__c</fullName>
        <label>Overall blocked Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                    <label>CIA-Payment in advance</label>
                </value>
                <value>
                    <fullName>D000</fullName>
                    <label>D000-Payment in advance</label>
                </value>
                <value>
                    <fullName>D003</fullName>
                    <label>D003-Pay immediately with Invoice</label>
                </value>
                <value>
                    <fullName>D005</fullName>
                    <label>D005-D05/5 days after delivery</label>
                </value>
                <value>
                    <fullName>D010</fullName>
                    <label>D010-D10/10 days after delivery</label>
                </value>
                <value>
                    <fullName>D015</fullName>
                    <label>D015-15 days after delivery</label>
                </value>
                <value>
                    <fullName>D020</fullName>
                    <label>D020-20 days, due net</label>
                </value>
                <value>
                    <fullName>D030</fullName>
                    <label>D030-30 days, due net</label>
                </value>
                <value>
                    <fullName>D045</fullName>
                    <label>D045-45 days, due net</label>
                </value>
                <value>
                    <fullName>D060</fullName>
                    <label>D060-60days, due net</label>
                </value>
                <value>
                    <fullName>D090</fullName>
                    <label>D090-90days, due net</label>
                </value>
                <value>
                    <fullName>D120</fullName>
                    <label>D120-120 days, due net</label>
                </value>
                <value>
                    <fullName>M110</fullName>
                    <label>M110-10 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M115</fullName>
                    <label>M115-15 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M120</fullName>
                    <label>M120-20 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M131</fullName>
                    <label>M131-30 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M145</fullName>
                    <label>M145-Before 15th in 2 months, due net</label>
                </value>
                <value>
                    <fullName>M231</fullName>
                    <label>M231-60 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M331</fullName>
                    <label>M331-90 days end of month, due net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Rejection_Status__c</fullName>
        <label>Rejection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Request_Delivery_Date__c</fullName>
        <label>Request Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Create_By__c</fullName>
        <label>SAP Create By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Create_Date__c</fullName>
        <label>SAP Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Order_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Type</label>
        <referenceTo>CN_Sales_Order_Type__c</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S010</fullName>
                    <label>S010-Sinodis Sales Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Sales Order (Sales Person)</relationshipLabel>
        <relationshipName>Sales_Order2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sold_To_Account_Name__c</fullName>
        <label>Sold-To Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Success</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Amount__c</fullName>
        <label>Tax amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Amount_With_Tax__c</fullName>
        <formula>CN_Tax_Amount__c  +  CN_Order_Net_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Up_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Sales Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Order</fullName>
        <active>true</active>
        <label>CN Sales Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>